# QuantHack

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
config/: instruments.yaml  portfolio.yaml  risk.yaml  schema_map.yaml
dashboard/: README.md  app.py  remote_probe.py  sources.py
docs/: overview.pptx
notebooks/: 00_data_onboarding.ipynb  README.md  backtesting.ipynb  data_analysis.ipynb  signal_research.ipynb
scripts/: check_churn.py  check_symbols.py  daily_report.py  eval_blackout.py  eval_passive_limits.py  eval_ratio_regime.py  eval_regime_gate.py  eval_vol_guard.py  fetch_binance.py  fetch_calendar.py  fetch_dukascopy.py  fetch_logs.sh  ingest_dump.py  ingest_historical.py  log_ticks.py  pnl_report.py  post_processing.py  provision_azure.sh  research_breakeven.py  research_cusum_regime.py  research_event_breakout.py  research_fast_fail_stop.py  research_fast_vol.py  research_flat_close.py  research_giveback.py  research_giveback_net.py  research_hf.py  research_leadlag.py  research_macro_gate.py  research_open_jump.py  research_portfolio_overlay.py  research_ratchet.py  research_reopen_fade.py  research_scaleout.py  research_scaleout_net.py  research_scaleout_vwap_net.py  research_sweep.py  research_vol_guard_sweep.py  research_vol_window.py  research_volume.py  (+13 more)
tests/: conftest.py  test_asian_sweep.py  test_attribution.py  test_bars_features.py  test_breached_stop.py  test_broker_pnl.py  test_cached_bars.py  test_calendar.py  test_cusum_regime.py  test_daily_report.py  test_diagnostics.py  test_engine.py  test_exposure_cap.py  test_ingest_dump.py  (+27 more)
(+53 files in other folders)
