[project]
name = "mt5-trader"
version = "0.1.0"
description = "Quant research + MT5 live trading pipeline for the Model to Market competition"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "polars>=1.0",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "scipy>=1.12",
    "certifi>=2024.6",   # CA bundle for fetch_calendar TLS verify on Windows
    "tzdata>=2024.1",    # polars timezone db on Windows (no system tz database)
    "MetaTrader5>=5.0.45; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jupyterlab>=4.0", "nbstripout>=0.7"]

[dependency-groups]
dev = ["pytest>=8.0", "nbstripout>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mt5_trader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
